<resources>
    <string name="app_name">Заметки</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_note">Новая заметка</string>
    <string name="title">Заголовок</string>
    <string name="snippet">Тело заметки</string>
    <string name="deadline">Дедлайн</string>
    <string name="date_deadline">Дата дедлайна</string>
    <string name="date_time_format">dd.MM.yyyy HH:mm</string>
    <string name="time_format">HH:mm</string>
    <string name="date_format_month_lower_10">%d.0%d.%d %s</string>
    <string name="date_format_month_upper_9">%d.%d.%d %s</string>
    <string name="error_date_format">Ошибка формата ввода даты и времени</string>
    <string name="saved">Сохранено!</string>
    <string name="title_example">Title Example</string>
    <string name="snippet_example">Snippet Example</string>
    <string name="deadline_example">Deadline Example</string>
    <string name="void_note_not_added">Пустая заметка не добавлена</string>
    <string name="attention">Внимание</string>
    <string name="message_delete_note">Вы уверены, что хотите удалить эту заметку?</string>
    <string name="button_delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="enter_new_pin">Введите новый пин-код:</string>
    <string name="hint_edit_pin">введите 4 цифры</string>
    <string name="menu_title_settings">settings</string>
    <string name="menu_create_note_save">save</string>
    <string name="save">Сохранить</string>
    <string name="invisible_description">invisible</string>
    <string name="visible_description">visible</string>
    <string name="enter_pin">Введите пин-код</string>
    <string name="button_light_off">button light off</string>
    <string name="button_light_on">button light on</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="not_equal_pin">Неверный пин-код</string>
    <string name="file_tag">###</string>
    <string name="error_save_file">Ошибка сохранения файла</string>
    <string name="error_read_file">Ошибка чтения файла</string>
    <string name="error_file_not_exist">Ошибка, файл не найден</string>
    <string name="null_tag">000</string>
    <string name="write_four_digits">Введите 4 цифры</string>
</resources>
