<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_standard"
    android:layout_marginEnd="@dimen/margin_standard"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateNoteActivity"
    tools:showIn="@layout/activity_create_note">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edit_snippet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginBottom="@dimen/margin_standard"/>

    <EditText
        android:id="@+id/edit_snippet"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_snippet"
        android:hint="@string/snippet"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/checkbox_deadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_title"
        android:layout_marginBottom="@dimen/margin_standard"/>

    <CheckBox
        android:id="@+id/checkbox_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deadline"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_deadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_snippet"/>

    <LinearLayout
        android:id="@+id/linear_layout_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_deadline">

        <EditText
            android:id="@+id/edit_date_deadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/date_deadline"
            android:inputType="datetime"
            android:layout_weight="9"/>

        <ImageButton
            android:id="@+id/button_show_calendar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ic_today_black_24dp"
            android:onClick="onClickShowCalendar"
            android:scaleType="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>